# practising_cmake

./: CMakeLists.txt  README.md  hello-world-vsCode.cpp
